--- a/styles.css
+++ b/styles.css
@@ -1136,9 +1136,9 @@ body {
     .variable-input-group.locked .form-control,
     .variable-input-group.locked .form-select,
     .variable-input-group.locked .form-range {
-        background-color: #e9ecef !important; /* Szary kolor tła */
-        cursor: not-allowed !important;
-        opacity: 0.7 !important;
+        background-color: #e9ecef 
+        cursor: not-allowed 
+        opacity: 0.7 
     }
     
     .chart-container {
