--- a/styles.css
+++ b/styles.css
@@ -954,7 +954,7 @@ body {
 /* K A L K U L A T O R */
 .calculator {
     background: #000000;
-    border-radius: 8px 0 0 8px;
+    border-radius: 8px 0 8px 0;
     padding: 15px;
     width: 180px;
     margin: 5px auto;
@@ -1035,7 +1035,7 @@ body {
     padding: 5px 0 5px 0;
     touch-action: none;
     background: var(--secondary-bg);
-    border-radius: 8px 0 0 8px;
+    border-radius: 8px 0 8px 0;
     box-shadow: 0 2px 4px var(--shadow-color);
 }
 
