--- a/styles.css
+++ b/styles.css
@@ -986,8 +986,8 @@ body {
     border: none;
     border-radius: 50%;
     border-radius: 8px 0 8px 0;
-    width: 30px;
-    height: 30px;
+    width: 25px;
+    height: 25px;
     font-size: 0.9em;
     display: flex;
     align-items: center;
@@ -1022,8 +1022,8 @@ body {
 .calc-zero {
     grid-column: span 2;
     border-radius: 8px 0 8px 0;
-    width: 75px;
-    height: 30px;
+    width: 70px;
+    height: 25px;
 }
 
 .draggable {
@@ -1037,7 +1037,7 @@ body {
     padding: 5px 0 5px 0;
     touch-action: none;
     background: var(--secondary-bg);
-    border-radius: 0 0 8px 0;
+    border-radius: 8px 0 8px 0;
     box-shadow: 0 2px 4px var(--shadow-color);
 }
 
