--- a/styles.css
+++ b/styles.css
@@ -956,9 +956,10 @@ body {
     background: #000000;
     border-radius: 8px 0 8px 0;
     padding: 15px;
-    width: 120px;
-    height: 200px;
-    margin: 5px auto;
+    width: 150px;
+    height: 230px;
+    margin: 0 auto;
+    margin-top: 5px;
 }
 
 #calcDisplay {
@@ -1033,8 +1034,8 @@ body {
     z-index: 1000;
     user-select: none;
     width: 150px;
-    max-width: 150px;
-    min-height: 200px;
+    max-width: 180px;
+    min-height: 230px;
     padding: 5px 0 5px 0;
     touch-action: none;
     background: var(--secondary-bg);
