--- a/styles.css
+++ b/styles.css
@@ -958,7 +958,7 @@ body {
     padding: 15px;
     width: 170px;
     height: 230px;
-    margin: 0 auto;
+    margin: 5px auto;
 }
 
 #calcDisplay {
@@ -1035,7 +1035,6 @@ body {
     width: 180px;
     max-width: 180px;
     min-height: 230px;
-    padding: 5px 0 5px 0;
     touch-action: none;
     background: var(--secondary-bg);
     border-radius: 8px 0 8px 0;
