--- a/styles.css
+++ b/styles.css
@@ -583,7 +583,7 @@ body {
     outline: none;
     box-shadow: 0 0 4px var(--accent-color);
     border: 1px solid var(--border-color);
-    background-color: var(--input-group-bg);
+    background-color: var(--input-bg);
     color: var(--primary-text);
     appearance: none;
     -webkit-appearance: none;
@@ -1024,7 +1024,7 @@ body {
     grid-column: span 2;
     border-radius: 8px 0 8px 0;
     width: 70px;
-    height: 25px;
+    height: 30px;
 }
 
 .draggable {
