--- a/styles.css
+++ b/styles.css
@@ -124,6 +124,9 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
     border-radius: 8px 0 8px 0;
 }
 
